# a56

./: CMakeLists.txt  a56.h  a56.key  a56.y  getopt.c  keybld.c  main.c  subs.c  toomf.c
